--- a/middle_team_project/WebContent/index.html
+++ b/middle_team_project/WebContent/index.html
@@ -16,7 +16,7 @@
         width: 100%;
         height: 150px;
         max-height: 25%;
-        background-color: aqua;
+        background-color: red;
     }
   </style>
 </head>
