--- a/middle_team_project/WebContent/index.html
+++ b/middle_team_project/WebContent/index.html
@@ -63,7 +63,7 @@
 
     <main>
      <div class="border w-100 d-flex justify-content-center" style="height:500px">
-     	<h1 style="line-height:500px">내용</h1>
+     	<h1 style="line-height:500px">김은솔</h1>
      </div>
     </main>
     
