dev_miley병합 후 리소스 변경 후 커밋 & 푸쉬

--- a/middle_team_project/WebContent/index.html
+++ b/middle_team_project/WebContent/index.html
@@ -34,10 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="${pageContext.request.contextPath}/lotto.do">조원1</a>
+              <a class="nav-link active" aria-current="page" href="${pageContext.request.contextPath}/game_avoidBall">공피하기</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="${pageContext.request.contextPath }/rsp.do">조원2</a>
+              <a class="nav-link active" aria-current="page" href="${pageContext.request.contextPath }/game_puzzle">퍼즐</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="${pageContext.request.contextPath }/board.do">조원3</a>
