--- a/middle_team_project/WebContent/index.html
+++ b/middle_team_project/WebContent/index.html
@@ -40,10 +40,10 @@
               <a class="nav-link active" aria-current="page" href="${pageContext.request.contextPath }/game_puzzle">퍼즐</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="${pageContext.request.contextPath }/board.do">조원3</a>
+              <a class="nav-link active" aria-current="page" href="${pageContext.request.contextPath }/game_rsp">가위바위보</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="${pageContext.request.contextPath }/board.do">조원4</a>
+              <a class="nav-link active" aria-current="page" href="${pageContext.request.contextPath }/asd">아바타 채팅</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="${pageContext.request.contextPath }/gugudan.do">게시판</a>
